crates/hexeract-macros/tests/ui/fail_reference_message.stderr
error: the message argument must be an owned message type, not a reference
  --> tests/ui/fail_reference_message.rs:11:14
   |
11 |         cmd: &SomeCmd,
   |              ^^^^^^^^
